@@ -1,3 +1,13 @@
+2004-05-18  Jody Goldberg <jody@gnome.org>
+
+	* control-center.c (select_entry) : Ensure that the selected
+	  entry is visible.
+
+2004-05-17  Jody Goldberg <jody@gnome.org>
+
+	* control-center-categories.c : merge the icon theme handling from the
+	  existing control center into the ximian shell.
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
